# playground-561g4y6s

./: techio.yml
build-cpp-project-Desktop_Qt_5_12_11_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-3213644ed88a4310de60.json  cmakeFiles-v1-7da4d4966c917949e06f.json  codemodel-v2-57acbe1b52368acd0236.json  index-2022-10-20T20-22-38-0557.json  target-speakingthread-Debug-4f892e9ad1188f51d525.json
build-cpp-project-Desktop_Qt_5_12_11_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-26f97adde390d7aea924.json  index-2022-10-20T19-38-29-0686.json  target-speakingthread-Debug-f23b4ec03eae12bfe25b.json
cpp-project/: CMakeLists.txt  run.sh
cpp-project/src/: SpeakingThreadTest.cpp
cpp-project/src/Exercises/: MainUtil.h  MutexData.h  SpeakingThread.cpp  SpeakingThread.h
markdowns/: welcome.md
